Fix gh-2552